--- a/Terraria/src/application/vue/vue.fxml
+++ b/Terraria/src/application/vue/vue.fxml
@@ -11,8 +11,10 @@
       <Pane fx:id="pane" focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#move" onKeyReleased="#moveRelease" prefHeight="320.0" prefWidth="320.0" BorderPane.alignment="CENTER">
          <children>
             <TilePane id="S" fx:id="tileP" alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#removeBloc" prefHeight="320.0" prefWidth="320.0" style="-fx-background-color: grey;" />
+            <TilePane fx:id="tPaneInvRapide" onMouseClicked="#inventaireMouse" prefHeight="144.0" prefWidth="200.0" />
             <TilePane fx:id="tPaneHp" alignment="TOP_RIGHT" prefHeight="166.0" prefWidth="320.0" />
-            <TilePane fx:id="tPaneInv" onMouseClicked="#inventaireMouse" opacity="0.75" prefColumns="4" prefHeight="200.0" prefRows="3" prefWidth="200.0" />
+            <TilePane fx:id="tPaneInv" onMouseClicked="#inventaireMouse" opacity="0.75" prefColumns="4" prefHeight="44.0" prefRows="3" prefWidth="200.0" />
+            <Label fx:id="description" />
          </children>
       </Pane>
    </center>
