--- a/Terraria/src/application/vue/vue.fxml
+++ b/Terraria/src/application/vue/vue.fxml
@@ -11,7 +11,8 @@
 		<Pane fx:id="pane" focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#move" onKeyReleased="#moveRelease" prefHeight="320.0" prefWidth="320.0">
 			<children>
 				<TilePane id="S" fx:id="tileP" alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#removeBloc" prefHeight="320.0" prefWidth="320.0" />
-				<GridPane fx:id="tPaneInvRapide" onMouseClicked="#inventaireMouse" onMouseEntered="#mouseEnter" prefHeight="30.0" prefWidth="174.0">
+            <TilePane fx:id="tPaneCraft" onMouseClicked="#craftMouse" prefHeight="200.0" prefWidth="40.0" />
+				<GridPane fx:id="tPaneInvRapide" onMouseClicked="#inventaireMouse" prefHeight="30.0" prefWidth="174.0">
 					<columnConstraints>
 						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -24,7 +25,7 @@
 				</GridPane>
 				<TilePane fx:id="tPaneHp" alignment="TOP_RIGHT" layoutX="175.0" prefHeight="37.0" prefWidth="145.0" />
 				<Label fx:id="description" />
-				<GridPane fx:id="tPaneInv" layoutX="9.0" layoutY="16.0" onMouseClicked="#inventaireMouse" onMouseEntered="#mouseEnter" prefHeight="125.0" prefWidth="192.0">
+				<GridPane fx:id="tPaneInv" layoutX="10.0" layoutY="16.0" onMouseClicked="#inventaireMouse" prefHeight="125.0" prefWidth="192.0">
 					<columnConstraints>
 						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
 						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
