--- a/Terraria/src/application/vue/vue.fxml
+++ b/Terraria/src/application/vue/vue.fxml
@@ -6,11 +6,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<HBox xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleur.Controleur">
+<Pane xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controleur.Controleur">
 	<children>
 		<Pane fx:id="pane" focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#move" onKeyReleased="#moveRelease" prefHeight="320.0" prefWidth="320.0">
-			<children>
-				<TilePane id="S" fx:id="tileP" alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickEnvironement" prefHeight="320.0" prefWidth="320.0" />
+				<TilePane fx:id="tileP" alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickEnvironement" prefHeight="320.0" prefWidth="320.0" />
 				<TilePane fx:id="tPaneCraft" onMouseClicked="#craftMouse" prefHeight="200.0" prefWidth="40.0" style="-fx-padding: 10;" />
 
 				<GridPane fx:id="tPaneInvRapide" onMouseClicked="#inventaireMouse" prefHeight="30.0" prefWidth="174.0">
@@ -39,7 +38,6 @@
 						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 					</rowConstraints>
 				</GridPane>
-			</children>
 		</Pane>
 	</children>
-</HBox>
+</Pane>
