--- a/Terraria/src/application/vue/vue.fxml
+++ b/Terraria/src/application/vue/vue.fxml
@@ -13,9 +13,9 @@
 				<Pane fx:id="paneActeur" focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#move" onKeyReleased="#moveRelease" prefHeight="320.0" prefWidth="320.0" />
 				<TilePane fx:id="tileP" alignment="BOTTOM_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickEnvironement" prefHeight="320.0" prefWidth="320.0" />
 				<TilePane fx:id="tPaneCraft" onMouseClicked="#craftMouse" prefHeight="200.0" prefWidth="40.0" style="-fx-padding: 10;" />
-				<Pane fx:id="menu" prefHeight="200.0" prefWidth="40.0"/>
-				<Pane fx:id="menuTriche" prefHeight="200.0" prefWidth="40.0"/>
-				<Pane fx:id="menuPnj" prefHeight="200.0" prefWidth="40.0"/>
+				<Pane fx:id="menu" prefHeight="200.0" prefWidth="40.0" />
+				<Pane fx:id="menuTriche" prefHeight="200.0" prefWidth="40.0" />
+				<Pane fx:id="menuPnj" layoutX="175.0" layoutY="83.0" prefHeight="43.0" prefWidth="145.0" style="-fx-background-color: grey;" />
 				<GridPane fx:id="tPaneInvRapide" onMouseClicked="#inventaireMouse" prefHeight="30.0" prefWidth="174.0">
 					<columnConstraints>
 						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
